@@ -2,9 +2,10 @@ package com.gradeflow.config;
 
 import com.gradeflow.security.JwtAuthFilter;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.MediaType;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -17,15 +18,31 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.access.AccessDeniedHandler;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import jakarta.servlet.http.HttpServletResponse;
+
 import java.util.List;
 
+/**
+ * Security configuration for GradeFlow backend.
+ *
+ * This class handles:
+ * - JWT authentication filtering
+ * - Role-based authorization
+ * - CORS configuration (frontend access control)
+ * - Stateless session management
+ * - Security exception handling
+ *
+ * It ensures only authorized users can access protected endpoints
+ * while allowing public access to authentication APIs.
+ */
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
@@ -35,9 +52,27 @@ public class SecurityConfig {
     private final JwtAuthFilter jwtAuthFilter;
     private final UserDetailsService userDetailsService;
 
-    @Value("${gradeflow.cors.allowed-origins}")
-    private String allowedOrigins;
 
+    /**
+     * Allowed frontend origins (CORS whitelist).
+     */
+    private static final List<String> ALLOWED_ORIGINS = List.of(
+            "http://localhost:5173",
+            "http://localhost:3000",
+            "https://von-unperched-affectionally.ngrok-free.dev",
+            "https://gradeflow-frontend.vercel.app"
+    );
+
+    /**
+     * Main Spring Security filter chain configuration.
+     *
+     * Responsibilities:
+     * - Disable CSRF (not needed for JWT stateless APIs)
+     * - Enable CORS
+     * - Define public and protected routes
+     * - Add JWT authentication filter
+     * - Configure exception handling
+     */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
@@ -45,10 +80,25 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
+
+                        // Allow preflight requests (critical for CORS)
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                        // Public authentication endpoints
                         .requestMatchers("/api/auth/**").permitAll()
+
+                        // Role-based access control
+                        .requestMatchers("/api/sponsor/templates/**").hasAnyRole("SPONSOR", "IT")
                         .requestMatchers("/api/sponsor/**").hasRole("SPONSOR")
+                        .requestMatchers("/api/it/**").hasRole("IT")
                         .requestMatchers("/api/teacher/**").hasRole("TEACHER")
+
+                        // All other requests require authentication
                         .anyRequest().authenticated()
+                )
+                .exceptionHandling(ex -> ex
+                        .authenticationEntryPoint(authenticationEntryPoint())
+                        .accessDeniedHandler(accessDeniedHandler())
                 )
                 .authenticationProvider(authenticationProvider())
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
@@ -56,19 +106,77 @@ public class SecurityConfig {
         return http.build();
     }
 
+    /**
+     * Handles unauthenticated requests (401 Unauthorized).
+     */
+    @Bean
+    public AuthenticationEntryPoint authenticationEntryPoint() {
+        return (request, response, authException) -> {
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+            response.getWriter().write("{\"error\":\"Authentication required. Please log in.\"}");
+        };
+    }
+
+    /**
+     * Handles unauthorized access (403 Forbidden).
+     */
+    @Bean
+    public AccessDeniedHandler accessDeniedHandler() {
+        return (request, response, accessDeniedException) -> {
+            response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+            response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+            response.getWriter().write("{\"error\":\"Access denied. You do not have permission to access this resource.\"}");
+        };
+    }
+
+    /**
+     * CORS configuration for frontend-backend communication.
+     *
+     * This allows the frontend to call backend APIs.
+     *
+     * IMPORTANT RULES:
+     * - allowCredentials(true) requires explicit origins (no "*")
+     * - Headers must be explicitly listed
+     * - Must include Authorization header for JWT
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*"));
+
+        // Allowed frontend origins
+        config.setAllowedOrigins(ALLOWED_ORIGINS);
+
+        // Allowed HTTP methods
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+
+        // Allowed request headers
+        config.setAllowedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "Origin",
+                "X-Requested-With",
+                "ngrok-skip-browser-warning"
+        ));
+
+        // Expose JWT token to frontend
+        config.setExposedHeaders(List.of("Authorization"));
+
+        // Allow cookies / auth headers
         config.setAllowCredentials(true);
+
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
+
         return source;
     }
 
+    /**
+     * Authentication provider using custom UserDetailsService.
+     */
     @Bean
     public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
@@ -77,11 +185,17 @@ public class SecurityConfig {
         return provider;
     }
 
+    /**
+     * Authentication manager used by Spring Security.
+     */
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
 
+    /**
+     * Password encoder for hashing passwords securely.
+     */
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
